--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>ecuatie de gradul 2</title>
+<head><title>Rezolvator de fleacuri de gradul II</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.2/math.min.js"></script></head>
 <body>
     <h1>REZOLVATOR DE FLEACURI DE GRADUL II</h1>
