--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.2/math.min.js"></script></head>
 <body>
     <h1>REZOLVATOR DE FLEACURI DE GRADUL II</h1>
-<îmi src="https://pbs.twimg.com/ext_tw_video_thumb/1906557847690756096/pu/img/4uO4iF50tJKR2YU5.jpg" align=right height=550 width=400>
+<img src="https://pbs.twimg.com/ext_tw_video_thumb/1906557847690756096/pu/img/4uO4iF50tJKR2YU5.jpg" align=right height=550 width=400>
     <label>a= <input type="number" id="a"></label><br>
     <label>b= <input type="number" id="b"></label><br>
     <label>c= <input type="number" id="c"></label><br>
