--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Rezolvator de fleacuri de gradul II</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.2/math.min.js"></script></head>
-<body>
+<body bgcolor=purple>
     <h1>REZOLVATOR DE FLEACURI DE GRADUL II</h1>
 <img src="https://pbs.twimg.com/ext_tw_video_thumb/1906557847690756096/pu/img/4uO4iF50tJKR2YU5.jpg" align=right height=550 width=400>
     <label>a= <input type="number" id="a"></label><br>
